2000-03-21  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE, _AC_INIT_PARSE_ARGS): Move more
	initializations to...
	(_AC_INIT_DEFAULTS): here.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Give a means to compute `srcdir' earlier in configure.

	* acgeneral.m4 (_AC_INIT_SRCDIR): New macro, pulled out from...
	(_AC_INIT_PREPARE): No longer compute `srcdir'.
	(_AC_INIT): Use _AC_INIT_SRCDIR.
	(AC_INIT): Don't forget to pass the argument to _AC_INIT.

2000-03-20  Jim Meyering  <meyering@lucent.com>

	* acspecific.m4 (AC_SYS_LONG_FILE_NAMES): Don't test for existence
	of $ac_xdir.  Not only is `test -e' not portable, but the test isn't
	necessary at all;  the following mkdir ends up accomplishing the
	same goal.  Suggestion from Alexandre Oliva.

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT) [setting IFS]: Be careful
	to use space, tab and new line, in precisely that order.

2000-03-20  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT_SUBDIRS): Rename as _AC_OUTPUT_SUBDIRS.
	No argument, use AC_LIST_SUBDIRS.
	Adjust callers.

2000-03-18  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_ARG_ENABLE, AC_ARG_WITH): Double quote the head
	of the help snippet.

2000-03-18  Akim Demaille  <akim@epita.fr>

	Give an identity to `configure' scripts.

	* acgeneral.m4 (AC_PACKAGE): New macro.
	(_AC_COPYRIGHT_SEPARATOR): Remove.
	(AC_COPYRIGHT): Adjust.
	(_AC_INIT_HELP, _AC_INIT_VERSION): Name the package you configure
	when you want.
	(_AC_INIT): Adjust.
	* configure.in (AC_PACKAGE): Add.

2000-03-18  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.

2000-03-20  Akim Demaille  <akim@epita.fr>

	Don't rely on RS = "\0" to swallow the whole input as a single
	record, this is not portable: mawk and nawk understand it as RS =
	"".  gawk understands it as expected.

	* autoconf.sh (translate_awk::BEGIN): No longer change RS.
	(translate_awk::body): Move to the END.
	Instead, accumulate the input in `request'.
