@@ -1,5 +1,15 @@
 2000-03-21  Akim Demaille  <akim@epita.fr>
 
+	Uniform idioms.
+
+	* acgeneral.m4 (_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS,
+	_AC_OUTPUT_LINKS, _AC_OUTPUT_COMMANDS): Prefer
+	for i in : $is; do test $i = : && continue
+	over
+	for i in .. $is; do if test $i != ..; then
+
+2000-03-21  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (_AC_INIT_PREPARE, _AC_INIT_PARSE_ARGS): Move more
 	initializations to...
 	(_AC_INIT_DEFAULTS): here.
